--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/bin/
-/target/
 # Compiled class file
 *.class
 
@@ -22,3 +20,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.DS_Store
+target
+bin
+build
+.gradle
+.springBeans
+*.iml
+*.ipr
+*.iws
+*.log
+.classpath
+.project
+.settings
