--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.miga.springboot</groupId>
-    <artifactId>spring-boot-rest-api</artifactId>
+    <artifactId>spring-boot-sample-data-jpa</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>spring-boot-rest-api</name>
-    <description>Demo project for Spring Boot and REST API</description>
+    <name>spring-boot-sample-data-jpa</name>
+    <description>Sample project for Spring Boot Data JPA</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
